--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background: #f55a5a;
   color: white;
   border-radius: 0 0 10px 10px;
@@ -16,4 +18,61 @@ nav > img {
   height: 50px;
   width: 50px;
   padding-right: 0.5rem;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10rem;
+}
+
+.card {
+  border-radius: 20px;
+  box-shadow: 2.5px 3px 3px 3px grey;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50rem;
+  margin-top: 5rem;
+  padding: 1rem;
+}
+
+.card > img {
+  width: 15rem;
+  height: 15rem;
+  padding-right: 1.2rem;
+  border-radius: 10px;
+}
+
+.card-location-content {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  align-items: center;
+}
+
+.location {
+  color: #aba9b3;
+  font-size: large;
+  font-weight: bold;
+}
+
+a {
+  color: #aba9b3;
+}
+
+.card-title {
+  margin-top: 0;
+}
+
+.card-dates {
+  color: #474454;
+  font-weight: bold;
+}
+
+.description {
+  padding-right: 1rem;
+  color: #63606d;
+  text-align: justify;
 }
